Add configuration management, sentiment analysis, and data export functionalities; enhance message sanitization and visualization capabilities.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 *.txt
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info
+dist/
+build/
+*.log
+.env
+.venv
+venv/
+ENV/
+exports/
+*.png
+*.jpg
+*.jpeg
+*.json
+!config.json
+*.xlsx
+*.csv
+!requirements.txt
+.pytest_cache/
+.coverage
+htmlcov/
+.DS_Store
+Thumbs.db
